feat: added parallel version with processor and virtual threads